# UniverAPI

./: .gitignore  Dockerfile  REDME.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
app/: .env  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_12_19_2133-6736abd101a0_create_users_and_roles_table.py  2024_12_20_0019-6637f26cc03a_added_a_password_column_to_the_users_.py  2024_12_27_2159-de0e73e848bc_create_group_table.py  2024_12_30_1750-89c8a1d57b38_create_specialities_table.py  2024_12_30_2329-f3130297cb3c_create_enrollment_table.py  2025_01_05_2153-3cc569db49f0_create_course_table.py  2025_01_06_1821-159e3235bf03_update_course_table.py  2025_01_24_1854-70791c0fbc0c_update_enrollment_table.py  2025_01_26_1604-05c075530557_rename_the_study_year_column_to_.py  2025_01_30_1640-6da739d2bec8_create_role_table.py  2025_01_30_1641-d2b1fdebfa64_create_user_table.py  2025_01_30_1642-37d8494c0657_create_group_table.py  2025_01_30_1643-419f2544abea_create_speciality_table.py  2025_01_30_1644-2fda6831559b_create_enrollment_table.py  2025_01_30_1645-1360ff05f248_create_course_table.py
app/api/: __init__.py
app/api/auth/: auth.py  dao.py  dependencies.py  schemas.py  view.py
app/api/course/: dao.py  dependencies.py  schemas.py  view.py
app/api/enrollments/: dao.py  dependencies.py  schemas.py  view.py
app/core/: __init__.py  config.py  db_helper.py  logger_config.py  utils.py
app/dao/: base.py
tests/: conftest.py  test_auth.py  test_course.py  test_group.py  test_one.py  test_role.py  test_speciality.py  test_user.py  utils.py
(+23 files in other folders)
