[tool.poetry]
name = "univerapi"
version = "0.1.0"
description = ""
authors = ["_Avvake_ <denisergo18@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
greenlet = "^3.1.1"
bcrypt = "4.0.1"
pydantic = "^2.10.4"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
